More webpage changes...

--- a/games/EXCAVATOR/index.html
+++ b/games/EXCAVATOR/index.html
@@ -7,6 +7,14 @@
     <!--<link rel="shortcut icon" href="TemplateData/favicon.ico">-->
     <link rel="stylesheet" href="TemplateData/style.css">
     <style>
+
+      u
+      {
+        text-decoration: underline;
+        text-decoration-thickness: 3px;
+        text-underline-offset: 5px;
+      }
+
       #performance-warning
       {
         color: yellow;
@@ -73,15 +81,15 @@
       <u>⚠️ For the best experience, download the <strong>Windows build</strong> instead, it runs with significantly better performance!</u>
     </div>
 
-    <!-- New Controls Section (left side) -->
     <div id="controls-panel">
       <u><h3>Controls</h3></u>
-      <p><strong>W / A / S / D</strong> – Move vehicle</p>
-      <p><strong>Mouse</strong> – Rotate camera</p>
-      <p><strong>Left Click</strong> – Dig / interact</p>
-      <p><strong>Space</strong> – Jump / brake</p>
-      <p><strong>Shift</strong> – Boost / precision mode</p>
-      <p><strong>Esc</strong> – Pause / menu</p>
+      <p><strong>WASD:</strong> Move camera</p>
+      <p><strong>Mouse:</strong> Look around</p>
+      <p><strong>Left Click:</strong> Break block</p>
+      <p><strong>Right Click:</strong> Place block</p>
+      <p><strong>Space:</strong> Move upwards</p>
+      <p><strong>Ctrl:</strong> Move downwards</p>
+      <p><strong>Shift:</strong> Move faster</p>
     </div>
 
     <div id="unity-container" class="unity-desktop">
@@ -100,7 +108,6 @@
 
     <div id="changelog">
       <u><h3>Test Changelog (11/8/2025)</h3></u>
-      <br>
       <p>* Improved terrain rendering performance</p>
       <p>+ Added particle effects for digging</p>
       <p>* Updated UI scaling for smaller screens</p>
