Update webpage again, small tweaks...

--- a/games/EXCAVATOR/index.html
+++ b/games/EXCAVATOR/index.html
@@ -11,7 +11,7 @@
       u
       {
         text-decoration: underline;
-        text-decoration-thickness: 3px;
+        text-decoration-thickness: 2px;
         text-underline-offset: 5px;
       }
 
@@ -76,7 +76,7 @@
       }
     </style>
   </head>
-  <body style="background-color: #202020;">
+  <body style="background-color: #231f20;">
     <div id="performance-warning">
       <u>⚠️ For the best experience, download the <strong>Windows build</strong> instead, it runs with significantly better performance!</u>
     </div>
@@ -88,7 +88,7 @@
       <p><strong>Left Click:</strong> Break block</p>
       <p><strong>Right Click:</strong> Place block</p>
       <p><strong>Space:</strong> Move upwards</p>
-      <p><strong>Ctrl:</strong> Move downwards</p>
+      <p><strong>Ctrl/C:</strong> Move downwards</p>
       <p><strong>Shift:</strong> Move faster</p>
     </div>
 
